# hms-firetv

./: .dockerignore  .env.example  .gitignore  BACKGROUND_LOGGER_IMPLEMENTATION.md  CHANGELOG.md  CMakeLists.txt  CODE_REVIEW_FINDINGS.md  CONTRIBUTING.md  DEFERRED_FEATURES.md  DEVICE_DETECTION_STRATEGY.md  Dockerfile  LRU_CACHE_IMPLEMENTATION.md  MQTT_INTEGRATION_ARCHITECTURE.md  PHASE1_COMPLETE.md  PHASE5_COMPLETE.md  PRODUCTION_READY.md  README.md  SESSION_SUMMARY.md  build_and_deploy.sh  docker-compose.yml  ha_dashboard_corrected.yaml  ha_dashboard_updated.yaml  ha_scripts_for_apps.yaml  hms-firetv.service  install-service.sh  mosquitto.conf  run_service.sh  schema.sql  test_api.sh  test_full_integration.cpp  test_livingroom.cpp  test_mqtt_integration.cpp  uninstall-service.sh
.github/workflows/: docker-build.yml  release.yml
docs/: CONNECTION_POOL_IMPLEMENTATION.md  DATABASE_RETRY_LOGIC.md  DEPLOYMENT.md  DOCKER_GHCR.md  MQTT_EXTENSIBILITY.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE5_TESTING_GUIDE.md  TESTING_AND_TROUBLESHOOTING.md
frontend/: angular.json  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.routes.ts  app.ts
frontend/src/app/components/nav-bar/: nav-bar.component.ts
frontend/src/app/pages/apps/: apps.component.ts
frontend/src/app/pages/dashboard/: dashboard.component.ts
frontend/src/app/pages/devices/: devices.component.html  devices.component.scss  devices.component.ts
frontend/src/app/pages/remote/: remote.component.ts
frontend/src/app/pages/settings/: settings.component.ts
frontend/src/app/services/: api.service.ts
include/api/: AppsController.h  CommandController.h  DeviceController.h  PairingController.h  StatsController.h
include/clients/: LightningClient.h
include/database/: IDatabase.h  PostgresDatabase.h  SQLiteDatabase.h
include/models/: Device.h  DeviceApp.h
include/mqtt/: CommandHandler.h  DiscoveryPublisher.h  MQTTClient.h
include/repositories/: AppsRepository.h  DeviceRepository.h
include/services/: ConnectionPool.h  DatabaseService.h  DiscoveryService.h
include/utils/: AppConfig.h  BackgroundLogger.h  ConfigManager.h  LRUCache.h
src/: main.cpp
src/api/: AppsController.cpp  CommandController.cpp  DeviceController.cpp  PairingController.cpp  StatsController.cpp
src/clients/: LightningClient.cpp
src/database/: PostgresDatabase.cpp  SQLiteDatabase.cpp
src/mqtt/: CommandHandler.cpp  DiscoveryPublisher.cpp  MQTTClient.cpp
src/repositories/: AppsRepository.cpp  DeviceRepository.cpp
src/services/: DatabaseService.cpp  DiscoveryService.cpp
src/utils/: AppConfig.cpp
static/: chunk-3C5URT7C.js  chunk-4KT5IJ7H.js  chunk-ACMFC6IJ.js  chunk-FAGVSTKA.js  chunk-FHUSULDF.js  chunk-G5Q6IVPP.js  chunk-GWXWTDP7.js  chunk-K7UK2UL2.js  chunk-MOUOK3QB.js  chunk-OIUWIOGL.js  chunk-Q3Y5KXZU.js  chunk-QIDQYIKN.js  chunk-QM4Q5S4E.js  chunk-QXHVLMEN.js  chunk-SH7P346U.js  chunk-T5HGU2ML.js  chunk-TTKMRQAF.js  chunk-WF5NME63.js  chunk-WJA7NTE7.js  chunk-WWSWYCDP.js  chunk-XXWHYAPF.js  chunk-YXXULPJA.js  index.html  main-5KPILS5H.js  main-LO7QRTOK.js  main-XVU7THEA.js  styles-IPJ6PNRK.css
static/css/: app.css
static/js/: api.js  main.js  router.js
static/js/pages/: apps.js  dashboard.js  devices.js  remote.js  settings.js
tests/: CMakeLists.txt  test_apps_controller.cpp  test_apps_repository.cpp  test_background_logger.cpp  test_command_controller.cpp  test_command_handler.cpp  test_device_controller.cpp  test_device_repo.cpp  test_lightning_client.cpp  test_mqtt_client.cpp  test_mqtt_manual.sh  test_pairing_controller.cpp  test_stats_controller.cpp  test_volume.cpp
